--- a/cli.ini
+++ b/cli.ini
@@ -3,8 +3,9 @@ domains = $DOMAINS
 $STAGING_FLAG
 rsa-key-size = $RSA_KEY_SIZE
 post-hook = update-crt-list.sh
-agree-tos = true
+agree-tos = True
 authenticator = standalone
 preferred-challenges = http-01
 http-01-port = 90
-keep = true
+keep = True
+non-interactive = True
