--- a/cli.ini
+++ b/cli.ini
@@ -2,7 +2,7 @@ email = $EMAIL
 domains = $DOMAINS
 $STAGING_FLAG
 rsa-key-size = $RSA_KEY_SIZE
-post-hook = update-crt-list.sh
+post-hook = update-crt-list
 agree-tos = True
 authenticator = standalone
 preferred-challenges = http-01
