--- a/cli.ini
+++ b/cli.ini
@@ -1,5 +1,6 @@
 email = $EMAIL
 domains = $DOMAINS
+expand = True
 $STAGING_FLAG
 rsa-key-size = $RSA_KEY_SIZE
 post-hook = /usr/local/bin/update-crt-list
